gccida/g1/find_reloads_address
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5033:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5038:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5047:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v16; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5056:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v27; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5057:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5057:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5058:4: error: expected ';' after expression
rtx v29; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5058:5: error: use of undeclared identifier 'v29'
rtx v29; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5065:4: error: expected ';' after expression
rtx v36; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5065:5: error: use of undeclared identifier 'v36'
rtx v36; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5068:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5068:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5069:4: error: expected ';' after expression
rtx v40; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5069:5: error: use of undeclared identifier 'v40'
rtx v40; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5071:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5071:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5076:4: error: expected ';' after expression
rtx v47; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5076:5: error: use of undeclared identifier 'v47'
rtx v47; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/reload.c:5079:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_reloads_address/src/obj/reload.o] Error 1
